--- a/styles/index.css
+++ b/styles/index.css
@@ -13,7 +13,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgb(5,5,5);
+    background-color: rgb(0, 0, 0);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -31,8 +31,22 @@
 
 .loginForm {
     background-color: rgb(255, 255, 124);
+    width: 50%;
+    height: 100%;
+    margin-left: -60px;
 }
 
-.singupForm {
+.formBehind {
+    z-index: 0;
+}
+
+.formFront {
+    z-index: 1;
+}
+
+.signupForm {
     background-color: rgb(197, 252, 116);
+    width: 50%;
+    height: 100%;
+    margin-left: 40px;
 }
