--- a/styles/main.css
+++ b/styles/main.css
@@ -1,14 +1,54 @@
 .mainDiv {
     background-color: aquamarine;
+    height: 100%;
     display: flex;
     flex-direction: row;
     align-items: stretch;
     justify-content: center;
 }
 
+.closedSideBar {
+    background-color: blueviolet;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+}
+
+.sideOption:hover {
+    cursor: pointer;
+}
+
+.sideBar {
+    display: flex;
+    visibility: hidden;
+    background-color: orange;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 15%;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+}
+
+.topSideBar {
+    
+display: flex;
+    
+align-items: center;
+    
+flex-direction: row;
+    
+justify-content: space-between;
+}
+
+.open {
+    visibility: visible;
+}
+
 .leftSide {
     background-color:lightcoral;
-    width: 60%;
+    width: 50%;
 }
 
 .userInfo {
