--- a/styles/musicmain.css
+++ b/styles/musicmain.css
@@ -6,6 +6,45 @@
     
     justify-content: center;
     }
+
+    .closedSideBar {
+        background-color: blueviolet;
+        display: flex;
+        justify-content: flex-end;
+        width: 100%;
+    }
+    
+    .sideOption:hover {
+        cursor: pointer;
+    }
+    
+    .sideBar {
+        display: flex;
+        visibility: hidden;
+        background-color: orange;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 15%;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .topSideBar {
+        
+    display: flex;
+        
+    align-items: center;
+        
+    flex-direction: row;
+        
+    justify-content: space-between;
+    }
+    
+    .open {
+        visibility: visible;
+    }
     
     .leftDiv {
     
@@ -39,3 +78,5 @@
         width: 150px;
         height: 150px;
     }
+
+    
