--- a/styles/main.css
+++ b/styles/main.css
@@ -266,6 +266,8 @@ font-family: fantasy;
 
 /* === Lado Direito === */
 
+/* Musica Selecionada */
+
 .selectedMusicInfo{
     visibility: hidden;
     display: flex;
