--- a/styles/main.css
+++ b/styles/main.css
@@ -217,15 +217,14 @@ border-bottom-left-radius: 0;
 
 /* Partes da Lista */
 
+.musicBasicInfo {
+    margin: 3px 20px;
+    width: 100%;
+}
+
 .musicName {
     
-margin: 3px 20px;
-    
 font-size: larger;
-    
-width: 100%;
-    
-height: 100%;
     
 display: flex;
     
@@ -235,7 +234,7 @@ justify-content: flex-start;
     
 font-family: fantasy;
 }
-.musicName:hover {
+.musicBasicInfo:hover {
     cursor: pointer;
 }
 
