--- a/styles/userPage.css
+++ b/styles/userPage.css
@@ -1,5 +1,28 @@
-body {
-    background-color: black;
+/*
+Roxo: #6C00D7
+Roxo Escuro: #7100C7
+Branco: #EDEDF5
+Cinza: #424344
+Cinza Claro: #5F6162
+*/
+
+/* === Parte Principal === */
+
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+.adasdasdasdasdasdadasdadasdadasdasdasdadadasdads {
+    background-color: rgb(0, 0, 0);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: stretch;
+    flex-wrap: nowrap;
 }
 
 /* Div Principal*/
