--- a/styles/main.css
+++ b/styles/main.css
@@ -139,6 +139,10 @@ html, body {
 
 .sideBarUsername {
     padding: 10px 0;
+}
+
+.sideBarUsername:hover {
+    color:#6C00D7;
     cursor: pointer;
 }
 
@@ -176,34 +180,20 @@ html, body {
 }
 
 .musicModel {
-    
-background-color: #424344;
-    
-color: #EDEDF5;
-    
-display: flex;
-    
-flex-direction: row;
-    
-align-items: center;
-    
-justify-content: space-between;
-    
-width: 80%;
-    
-margin: 10px 0;
-    
-height: 60px;
-    
-border: 3px solid #EDEDF5;
-    
-border-radius: 30px;
-    
-border-left: none;
-    
-border-top-left-radius: 0;
-    
-border-bottom-left-radius: 0;
+    background-color: #424344;
+    color: #EDEDF5;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    margin: 10px 0;
+    height: 60px;
+    border: 3px solid #EDEDF5;
+    border-radius: 30px;
+    border-left: none;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
 }
 
 .musicModel:hover {
@@ -221,16 +211,11 @@ border-bottom-left-radius: 0;
 }
 
 .musicName {
-    
-font-size: larger;
-    
-display: flex;
-    
-align-items: center;
-    
-justify-content: flex-start;
-    
-font-family: fantasy;
+    font-size: larger;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-family: fantasy;
 }
 .musicBasicInfo:hover {
     cursor: pointer;
@@ -275,9 +260,6 @@ font-family: fantasy;
     padding: 50px 0;
 }
 
-.selectMusicCover {
-}
-
 .selectMusicCoverImage{
     width: 225px;
     height: 225px;
@@ -286,37 +268,20 @@ font-family: fantasy;
 }
 
 .musicInfo {
-
-display: flex;
-
-flex-direction: column;
-
-align-items: center;
-
-color: #EDEDF5;
-
-background-color: #424344;
-
-height: 90px;
-
-width: 100%;
-
-margin: 40px 0;
-
-justify-content: space-evenly;
-
-border-radius: 35px;
-
-border: 1px solid #7100C7;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #EDEDF5;
+    background-color: #424344;
+    height: 90px;
+    width: 100%;
+    margin: 40px 0;
+    justify-content: space-evenly;
+    border-radius: 35px;
+    border: 1px solid #7100C7;
 }
 
 .musicArtist {
-
-font-size: x-large;
-
-font-weight: bolder;
-}
-
-.userMaxPoints {
-
+    font-size: x-large;
+    font-weight: bolder;
 }
