--- a/styles/musicmain.css
+++ b/styles/musicmain.css
@@ -1,10 +1,12 @@
-/*
-Roxo: #6C00D7
-Roxo Escuro: #7100C7
-Branco: #EDEDF5
-Cinza: #424344
-Cinza Claro: #5F6162
-*/
+:root {
+    --roxo-claro: #6C00D7;
+    --roxo-escuro: #7100C7;
+    --branco: #EDEDF5;
+    --cinza: #424344;
+    --cinza-claro: #5F6162;
+    --preto: #000000;
+    --transparente: #ffffff00;
+}
 
 /* === Parte Principal === */
 
@@ -12,10 +14,10 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
+    background-color: var(--preto);
 }
 
 .mainDiv {
-    background-color: rgb(0, 0, 0);
     height: 100%;
     width: 100%;
     display: flex;
@@ -26,54 +28,43 @@ html, body {
 }
     
 .leftDiv {
-    
-width: 15%;
-    
-display: flex;
-    
-flex-direction: column;
-    
-align-items: center;
-    
-background-color: #6C00D7;
-color: #EDEDF5;
-    
-margin: 10px 25px;
-border: 1px solid #7100C7;
-border-radius: 25px;
-overflow: hidden;
-    }
+    width: 15%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--roxo-claro);
+    color: var(--branco);
+    margin: 10px 25px;
+    border: 1px solid var(--roxo-escuro);
+    border-radius: 25px;
+    overflow: hidden;
+}
     
 .rightDiv {
     width: 75%;
-    
-display: flex;
-    
-flex-direction: column;
-    
-align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--transparente);
+    margin: 10px 0px;
+}
 
-background-color: rgba(137, 48, 221, 0);
-margin: 10px 0px;
-
-    }
-
-    /* === Sidebar === */
+/* === Sidebar === */
 
 .sideBar {
     display: none;
     visibility: hidden;
     margin-left: 25px;
-    color: #EDEDF5;
+    color: var(--branco);
     width: 15%;
     height: 100%;
     flex-direction: column;
     align-items: center;
-    background-color: #424344;
+    background-color: var(--cinza);
     justify-content: space-between;
     font-size: larger;
     font-weight: 600;
-    border-left: 1px solid #7100C7;
+    border-left: 1px solid var(--roxo-escuro);
 }
 
 .sideBarButton:hover {
@@ -86,22 +77,17 @@ margin: 10px 0px;
 }
 
 .sideBarOption {
-
-display: flex;
-
-padding: 5px 0;
-
-flex-direction: row;
-
-align-items: center;
-
-flex-wrap: nowrap;
-
-justify-content: flex-start;
+    display: flex;
+    padding: 5px 0;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
 }
 
 .sideBarOption:hover{
-    color: #6C00D7;
+    color: var(--roxo-claro);
+    cursor: pointer;
 }
 
 .sideBarOption > span {
@@ -115,71 +101,55 @@ justify-content: flex-start;
     justify-content: flex-start;
     width: 100%;
     text-align: center;
-    cursor: pointer;
 }
 
 .sideBarUsername {
-
-padding: 10px 0;
+    padding: 10px 0;
 }
-
+.sideBarUsername:hover {
+    color: var(--roxo-claro);
+    cursor: pointer;
+}
 
 /* === Capa e Ranking === */
 
 /* Capa da Música */
 
-    .musicCover {
-        border-radius: 25px;
-        overflow: hidden;
-    }
-    .musicCoverImage {
-        width: 100%;
-    }
+.musicCover {
+    border-radius: 25px;
+    overflow: hidden;
+}
+.musicCoverImage {
+    width: 100%;
+}
 
 /* Ranking de Pontos */
 
-    .ranking {
-
-display: flex;
-
-flex-direction: column;
-
-flex-wrap: nowrap;
-
-align-items: center;
-
-margin: 0 10%;
+.ranking {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin: 0 10%;
 }
 
-    .posicaoRanking {
-
-display: flex;
-
-flex-direction: column;
-
-flex-wrap: nowrap;
-
-align-items: center;
-
-padding: 3px 0px;
-
-width: 100%;
-border-bottom: 1px solid;
+.posicaoRanking {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    padding: 3px 0px;
+    width: 100%;
+    border-bottom: 1px solid;
 }
 
-    .posicaoUsername {
-
-text-align: center;
-
-
-
-
+.posicaoUsername {
+    text-align: center;
 }
 
-    .posicaoPontuacao {
-        
-text-align: center;
-    }
+.posicaoPontuacao {
+    text-align: center;
+}
 
 /* === Youtube Video === */
 
@@ -204,22 +174,21 @@ text-align: center;
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    background-color: #424344;
+    background-color: var(--cinza);
     font-size: large;
     border-radius: 25px;
-    border: 1px solid #7100C7;
+    border: 1px solid var(--roxo-escuro);
 }
 
 .playOptions {
-
-margin: 0 25px;
+    margin: 0 25px;
 }
 
 .playButton {
     display: flex;
     height: 100%;
     width: 50%;
-    color: #EDEDF5;
+    color: var(--branco);
     align-content: center;
 }
 
@@ -229,7 +198,7 @@ margin: 0 25px;
 
 .playButtonIcon:hover {
     cursor: pointer;
-    color: #6C00D7;
+    color: var(--roxo-claro);
     font-size: 100px !important;
 }
 
@@ -238,20 +207,12 @@ margin: 0 25px;
 .musicInfo {
     width: 50%;
     display: flex;
-
-flex-direction: column;
-
-align-items: flex-start;
-
-justify-content: center;
-color: #EDEDF5;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    color: var(--branco);
 }
 
 .musicTitle {
-
-font-weight: bolder;
-}
-
-.musicArtistYear {
-    
+    font-weight: bolder;
 }
